--- a/templates/img360/360.html.twig
+++ b/templates/img360/360.html.twig
@@ -20,7 +20,7 @@
 
                 var dome = new BABYLON.PhotoDome(
                     "testdome",
-                    './public/img/18032019425.jpeg', {
+                    {{ img }}, {
                         resolution: 32,
                         size: 1000
                     },
