--- a/templates/img360/index.html.twig
+++ b/templates/img360/index.html.twig
@@ -1,26 +1,29 @@
 {% extends 'base.html.twig' %}
 {% block title %}Formulaire{% endblock %}
 {% block body %}
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <div class="container">
-        <div class="row">
-            <div class="col" style="text-align: center;">
-                <br>
-                <h2 class="h2">Veuillez importer une image 360° : </h2><br>
-                {{ form_start(form) }}
-                <div class="input-group">
-                    <div class="custom-file">
-                        {{ form_widget(form.img, { 'id': 'inputGroupFile04', 'label': 'Input File'|trans, 'attr': {'class': 'custom-file-input'}}) }}
-                        <label class="custom-file-label labelInput" for="inputGroupFile04">Choose file</label>
+    <body class="imgBody">  
+        <link href="style/styleForm.css" rel="stylesheet" type="text/css"/>
+        <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <div class="container">
+            <div class="row">
+                <div class="col" style="text-align: center;">
+                    <br>
+                    <h2 class="h2">Veuillez importer une image 360° : </h2><br>
+                    {{ form_start(form) }}
+                    <div class="input-group">
+                        <div class="custom-file">
+                            {{ form_widget(form.img, { 'id': 'inputGroupFile04', 'label': 'Input File'|trans, 'attr': {'class': 'custom-file-input'}}) }}
+                            <label class="custom-file-label labelInput" for="inputGroupFile04">Choisir une image</label>
+                        </div>
+                        <div class="input-group-append">
+                            {{ form_widget(form.submit, { 'id': 'inputGroupFileAddon04', 'label': 'Submit'|trans, 'attr': { 'class': 'btn btn-outline-secondary'}})}}
+                        </div>
                     </div>
-                    <div class="input-group-append">
-                        {{ form_widget(form.submit, { 'id': 'inputGroupFileAddon04', 'label': 'Submit'|trans, 'attr': { 'class': 'btn btn-outline-secondary'}})}}
-                    </div>
+                    {{ form_end(form) }}
                 </div>
             </div>
-            {{ form_end(form) }}
         </div>
-    </div>
+    </body> 
     <script>
             $('#inputGroupFile04').on('change', function(){
                 var fileName = $(this).val();
